--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,12 @@ authors = [
 ]
 
 classifiers = [  #
-    "Development Status :: 5 - Production/Stable",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries :: Python Modules",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     # "Programming Language :: Python :: 3.12", no wheels 3.12 for dependency ecmwflibs
-    "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
 dependencies = [
@@ -36,22 +36,17 @@ dependencies = [
 
 [project.optional-dependencies]
 test = ["pytest", "coverage"]
-doc = ["mkdocs-material", "mkdocstrings[python]"]
+doc = ["mkdocs-material", "mkdocstrings[python]", "jinja2==3.0.3"]
 mypy = ["mypy"]
 ruff = ["ruff"]
-all = [
-    "meteole[test]",
-    "meteole[doc]",
-    "meteole[mypy]",
-    "meteole[ruff]",
-    "pre-commit",
-]
+dev = ["mypy", "pre-commit", "ruff"]
+all = ["meteole[test,dev,doc,mypy,ruff]"]
 
 [tool.setuptools]
-package-dir = { "" = "src" } #
+package-dir = { "" = "src" }
 
 [tool.pytest.ini_options]
-pythonpath = ["src"]  #
+pythonpath = ["src"]
 testpaths = ["tests"]
 
 [tool.mypy]
