--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,7 +49,7 @@
           - name: Set up Python version
             uses: actions/setup-python@v5 
             with:
-              python-version: '3.x'
+              python-version: '3.11'
           - name: Build package
             run: |
               python -m pip install --upgrade build
