chore: repo suggestions and formatting (#3)
* chore: repo suggestions and formatting

Signed-off-by: develop-cs <43383361+develop-cs@users.noreply.github.com>

* fix: ci-cd workflow

Signed-off-by: develop-cs <43383361+develop-cs@users.noreply.github.com>

* chore: change some module name

Signed-off-by: develop-cs <43383361+develop-cs@users.noreply.github.com>

---------

Signed-off-by: develop-cs <43383361+develop-cs@users.noreply.github.com>

--- a/.github/workflows/ci-cd-mkdocs.yml
+++ b/.github/workflows/ci-cd-mkdocs.yml
@@ -5,14 +5,14 @@
       branches:
         - main
       tags:
-        - '*'  # Later: \b[0-9]\.[0-9]+\.[0-9]+[ab]?[0-9]?\b
+        - '*'  # Later: \b[0-9]+\.[0-9]+\.[0-9]+[ab]?[0-9]+?\b
     pull_request:
       types:
         - opened
         - synchronize
       branches:
         - main
-  
+
   jobs:
     build:
       if: ${{ github.actor != 'dependabot[bot]' }}
