--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,17 +5,17 @@
         branches:
           - main
         tags:
-          - '*'  # Later: \b[0-9]\.[0-9]+\.[0-9]+[ab]?[0-9]?\b
+          - '*'  # Later: \b[0-9]+\.[0-9]+\.[0-9]+[ab]?[0-9]+?\b
       pull_request:
         types:
           - opened
           - synchronize
         branches:
           - main
-    
+
     jobs:
-      pre-commit:
-        name: Apply pre-commit hooks
+      verify:
+        name: Pre-commit hooks and Tests
         runs-on: ubuntu-latest
         steps:
           - name: Checkout
@@ -30,13 +30,15 @@
               pip install .[dev,test]
           - name: Cache pre-commit hooks
             uses: actions/cache@v4
-            with: 
+            with:
               path: ~/.cache/pre-commit
               key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
           - name: Run pre-commit hooks
             run: pre-commit run --all-files
+          - name: Unit Tests (pytest)
+            run: python -m pytest
       publish:
-        needs: pre-commit
+        needs: verify
         if: success() && startsWith(github.ref, 'refs/tags')
         name: Publish release to PyPI
         runs-on: ubuntu-latest
@@ -47,7 +49,7 @@
           - name: Checkout
             uses: actions/checkout@v4
           - name: Set up Python version
-            uses: actions/setup-python@v5 
+            uses: actions/setup-python@v5
             with:
               python-version: '3.11'
           - name: Build package
