--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,55 @@
+---
 default_language_version:
-    python: python3
+  python: python3
 repos:
--   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
     hooks:
-    -   id: ruff
-        args: [ --fix ]
-    -   id: ruff-format
--   repo: https://github.com/pre-commit/mirrors-mypy
+      - id: check-ast
+      - id: check-byte-order-marker
+      - id: check-case-conflict
+      - id: check-docstring-first
+      - id: check-json
+      - id: check-yaml
+        exclude: ^(docs/)
+      - id: debug-statements
+      - id: end-of-file-fixer
+        exclude: ^(docs/)
+      - id: pretty-format-json
+        args: [--autofix]
+      - id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
+        exclude: ^(docs/)
+      - id: mixed-line-ending
+        args: [--fix=lf]
+        exclude: ^(docs/)
+      - id: check-added-large-files
+        args: [--maxkb=500]
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.8.3
+    hooks:
+      - id: ruff
+        args: [--fix]
+      - id: ruff-format
+  - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0
     hooks:
-    -   id: mypy
+      - id: mypy
         args: [--config-file=pyproject.toml]
         files: src
-        additional_dependencies: [types-pytz,types-requests,types-python-dateutil]
--   repo: https://github.com/compilerla/conventional-pre-commit
+        additional_dependencies: [pydantic~=2.0,types-pytz,types-requests,types-python-dateutil]
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.21.2
+    hooks:
+      - id: gitleaks
+  - repo: https://github.com/pypa/pip-audit
+    rev: v2.7.3
+    hooks:
+      - id: pip-audit
+        args: [--skip-editable]
+  - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v3.6.0
     hooks:
-    -   id: conventional-pre-commit
+      - id: conventional-pre-commit
         stages: [commit-msg]
-        args: []
+        args: [feat, fix, ci, chore, test, docs]
