chore: add python 3.9 compatibility
Signed-off-by: develop-cs <43383361+develop-cs@users.noreply.github.com>

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,8 +35,8 @@
               key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
           - name: Run pre-commit hooks
             run: pre-commit run --all-files
-          - name: Unit Tests (pytest)
-            run: python -m pytest
+          - name: Unit Tests (tox)
+            run: python -m tox
       publish:
         needs: verify
         if: success() && startsWith(github.ref, 'refs/tags')
