--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,9 @@ min_version = 4.0
 env_list =
     py311
     py310
+    py39
 [testenv]
 description = run unit tests
 deps =
     pytest
-    pytest-cov
-commands = pytest tests --cov --cov-append
+commands = pytest tests
