--- a/.github/workflows/ci-cd-mkdocs.yml
+++ b/.github/workflows/ci-cd-mkdocs.yml
@@ -36,7 +36,7 @@
           with:
             path: "docs/site/"
     publish:
-      if: success() && startsWith(github.ref, 'refs/tags')
+      if: success() && github.ref == 'refs/heads/main'
       name: Publish doc
       needs: build
       permissions:
