--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,3 +53,7 @@ repos:
       - id: conventional-pre-commit
         stages: [commit-msg]
         args: [feat, fix, ci, chore, test, docs]
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.7.1
+    hooks:
+        - id: nbstripout
