--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "meteole"
-version = "0.0.1"
+version = "0.1.0b1"
 requires-python = ">3.8.0"
 description = "A Python client library for forecast model APIs (e.g., Météo-France)."
 readme = "README.md"
 license = {text = "Apache-2.0"}
 authors = [
         {name = "ThomasBouche"},
-        {name = "develop-cs"},
         {name = "GratienDSX"},
 ]
 
