--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "meteole"
-version = "0.2.0"
+version = "0.2.1"
 requires-python = ">3.8.0"
 description = "A Python client library for forecast model APIs (e.g., Météo-France)."
 readme = "README.md"
@@ -26,14 +26,15 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    # "Programming Language :: Python :: 3.12", no wheels 3.12 for dependency ecmwflibs
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: Apache Software License",
 ]
 
 dependencies = [
     "pandas>=2.0.0",
-    "ecmwflibs>=0.6.3",
-    "cfgrib>=0.0.11.0",
+    "eccodes>=2.39.0",
+    "cfgrib>=0.9.10.4",
     "requests>=2.31.0",
     "xarray>=2024.5.0",
     "xmltodict>=0.13.0",
