--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -51,7 +51,12 @@
           - name: Set up Python version
             uses: actions/setup-python@v5
             with:
-              python-version: '3.11'
+              python-version: |
+                3.9
+                3.10
+                3.11
+                3.12
+                3.13
           - name: Build package
             run: |
               python -m pip install --upgrade build
